Updated version number

--- a/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
+++ b/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
@@ -601,9 +601,7 @@
     <Resource Include="Images\Backgrounds\background %288%29.jpg" />
     <Resource Include="Images\Backgrounds\background %289%29.jpg" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Web\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Resource Include="Images\dal-icon-256.png" />
   </ItemGroup>
