Added background transition and proper overlay. Swapped content control out for Transition Control on plugin views Started working on F-14 default viewport template (needs images) Added the viewport name to the editor Added a viewport sihouette when a background image doesnt exist

--- a/DCS.Alternative.Launcher/packages.config
+++ b/DCS.Alternative.Launcher/packages.config
@@ -7,6 +7,7 @@
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.5.0" targetFramework="net461" />
   <package id="FluentWPF" version="0.7.0" targetFramework="net461" />
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net461" />
   <package id="HtmlAgilityPack" version="1.11.9" targetFramework="net461" />
   <package id="KeraLua" version="1.0.14" targetFramework="net461" />
   <package id="LoadingIndicators.WPF" version="0.0.1" targetFramework="net461" />
