Updated PLAY button based on MillerTime's suggestions Filtered out duplicate documentation tiles

--- a/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
+++ b/DCS.Alternative.Launcher/DCS.Alternative.Launcher.csproj
@@ -712,6 +712,9 @@
     <Resource Include="Images\Overlay.png" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Images\lauch-background-mask.png" />
+    <Resource Include="Images\lauch-background.jpg" />
+    <Resource Include="Images\lauch-background-mask-2.png" />
     <Content Include="Images\Wallpaper\1.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
