--- a/DCS.Alternative.Launcher/App.config
+++ b/DCS.Alternative.Launcher/App.config
@@ -18,6 +18,10 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="KeraLua" publicKeyToken="6a194c04b9c89217" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.19.0" newVersion="1.0.19.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
