--- a/DCS.Alternative.Launcher/packages.config
+++ b/DCS.Alternative.Launcher/packages.config
@@ -19,6 +19,7 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="NLua" version="1.4.20" targetFramework="net461" />
   <package id="ReactiveProperty" version="5.6.0" targetFramework="net461" />
+  <package id="SharpZipLib" version="1.2.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
   <package id="System.Reactive" version="4.1.5" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
